tested for jquery 1.9

--- a/sample/index.html
+++ b/sample/index.html
@@ -10,7 +10,7 @@
 		<!-- Start VisualLightBox.com HEAD section -->
 		<link rel="stylesheet" href="images/demo/main_demo/part1/engine/css/vlightbox1.css" type="text/css" />
 		<link rel="stylesheet" href="images/demo/main_demo/part1/engine/css/visuallightbox.css" type="text/css" media="screen" />
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
 		<script src="../visuallightbox.min.js" type="text/javascript"></script>
 		<!-- End VisualLightBox.com HEAD section -->
 		
