--- a/sample/index.html
+++ b/sample/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE HTML>
+﻿<!--This is Tet Version-->
+<!DOCTYPE HTML>
 <html lang="en-US" dir="ltr">
 <head>
     <title>Visual Lightbox JS: Free Visual Generator for Lightbox 2 Script for jQuery or Prototype. jQuery Lightbox.</title>
